--- a/GOTApp/GOTApp.csproj
+++ b/GOTApp/GOTApp.csproj
@@ -131,6 +131,7 @@
     <Content Include="scripts\Lib\raphael-2.js" />
     <Content Include="scripts\Lib\signature.js" />
     <Content Include="scripts\Lib\signature_pad.min.js" />
+    <Content Include="scripts\ReferenceFile.js" />
     <Content Include="Views\GOTHomePage.html" />
     <Content Include="Web.config" />
   </ItemGroup>
